fixed collapsed view

--- a/assets/styles/_navbar.scss
+++ b/assets/styles/_navbar.scss
@@ -71,7 +71,7 @@ $item: $main-med;
   }
 
   .navbar-toggler {
-    background: $main-lighter;
+    //background: $main-lighter;
     border: 1px solid $main-light;
   }
 
@@ -104,7 +104,7 @@ $item: $main-med;
 
 @media (max-width: 767px) {
   .navbar-custom {    
-      background: linear-gradient(180deg, rgb(255, 255, 255), $main-lighter) 0px 0px no-repeat padding-box padding-box transparent;
+      //background: linear-gradient(180deg, rgb(255, 255, 255), $main-lighter) 0px 0px no-repeat padding-box padding-box transparent;
 
       .navbar-nav {
         margin-top:10px;
