--- a/assets/styles/_sidebar.scss
+++ b/assets/styles/_sidebar.scss
@@ -90,7 +90,7 @@ $sidebar-width: 220px;
     border-top: 1px solid rgba($main-light, 0.3);
     border-bottom: 1px solid rgba($main-light, 0.3);
     color: $main-color;
-    background: linear-gradient(180deg, rgb(255, 255, 255), $main-lighter) 0px 0px no-repeat padding-box padding-box transparent;
+    //background: linear-gradient(180deg, rgb(255, 255, 255), $main-lighter) 0px 0px no-repeat padding-box padding-box transparent;
     padding: 10px;
     font-size: 1.3em;
 
